--- a/introduce.html
+++ b/introduce.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> introduce</title>
+    <style>
+        h1 {
+            color: antiquewhite;
+            text-align: center;
+        }
+
+        aside {
+            float: left;
+        }
+
+        article {
+            float: left;
+        }
+
+        h3 {
+            color: bisque;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>INTRODUCE MYSELF</h1>
+    </header>
+
+        <aside>
+            <img src="intro.jpg" alt="Mia Wang" style="width: 300px;height: 400px;">
+        </aside>
+
+        <article>
+            <h3>NAME: Mia Wang</h3>
+            <h3>AGE: 18</h3>
+            <h3>BRITHDAY: 07/02</h3>
+            <h3>SCHOOL: NPUST</h3>
+            <h3>MAJOR: Management Information System</h3>
+        </article>
     
 </body>
 </html>
